--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:backend": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Team Alchemist",
@@ -14,6 +15,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.8.1",
     "nodemon": "^3.1.4",
+    "server": "file:",
     "uuid": "^10.0.0"
   }
 }
